Next Implementation Steps of BaseClasses. Still WIP!!! New BaseLevel Added Old one removed

--- a/FMOH/Config/DefaultEngine.ini
+++ b/FMOH/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
+EditorStartupMap=/Game/Maps/FMOH_BaseLevel_P.FMOH_BaseLevel_P
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
