--- a/FMOH/Config/DefaultEngine.ini
+++ b/FMOH/Config/DefaultEngine.ini
@@ -4,14 +4,14 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/FirstPersonMap.FirstPersonMap
+EditorStartupMap=/Game/Maps/BaseMaps/FMOH_BaseLevel_P.FMOH_BaseLevel_P
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
+GameDefaultMap=/Game/Maps/FMOH_MainMenu.FMOH_MainMenu
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
