Added Text to The first Rooms

--- a/FMOH/FMOH.uproject
+++ b/FMOH/FMOH.uproject
@@ -14,6 +14,10 @@
 		{
 			"Name": "SkeletalMeshModelingTools",
 			"Enabled": true
+		},
+		{
+			"Name": "Text3D",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
