First LoadSave Implementation. Still WIP

--- a/FMOH/Config/DefaultEngine.ini
+++ b/FMOH/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ TransitionMap=
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Mechanics/LoadSaveGame/BP_GameInstance.BP_GameInstance_C
 GameDefaultMap=/Game/Maps/FMOH_MainMenu.FMOH_MainMenu
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
