--- a/FMOH/FMOH.uproject
+++ b/FMOH/FMOH.uproject
@@ -22,6 +22,11 @@
 		{
 			"Name": "FieldSystemPlugin",
 			"Enabled": true
+		},
+		{
+			"Name": "SnappingHelper",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/1e0699cf59d64105957b4aa40f367252"
 		}
 	],
 	"TargetPlatforms": [
