--- a/FMOH/FMOH.uproject
+++ b/FMOH/FMOH.uproject
@@ -27,6 +27,10 @@
 			"Name": "SnappingHelper",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/1e0699cf59d64105957b4aa40f367252"
+		},
+		{
+			"Name": "HDRIBackdrop",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
