Main Menu in the Persistent

--- a/FMOH/Config/DefaultEngine.ini
+++ b/FMOH/Config/DefaultEngine.ini
@@ -11,7 +11,7 @@ bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/Mechanics/LoadSaveGame/BP_GameInstance.BP_GameInstance_C
-GameDefaultMap=/Game/Maps/FMOH_MainMenu.FMOH_MainMenu
+GameDefaultMap=/Game/Maps/BaseMaps/FMOH_BaseLevel_P.FMOH_BaseLevel_P
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
