Adj to Portal and drawimg mechanic

--- a/FMOH/FMOH.uproject
+++ b/FMOH/FMOH.uproject
@@ -26,6 +26,10 @@
 		{
 			"Name": "HDRIBackdrop",
 			"Enabled": true
+		},
+		{
+			"Name": "NiagaraFluids",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
