--- a/FMOH/FMOH.uproject
+++ b/FMOH/FMOH.uproject
@@ -30,6 +30,10 @@
 		{
 			"Name": "NiagaraFluids",
 			"Enabled": true
+		},
+		{
+			"Name": "GPULightmass",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
