Hopefully fixing the building

--- a/FMOH/Config/DefaultGame.ini
+++ b/FMOH/Config/DefaultGame.ini
@@ -102,7 +102,7 @@ bSkipMovies=False
 -IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
-+DirectoriesToAlwaysStageAsUFS=(Path="UI\\UIArt\\Crosshair")
++DirectoriesToAlwaysStageAsUFS=(Path="UI/UIArt/Crosshair")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
